-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
Query Optimization
-
Fully Compatible
-
ALL
-
-
200
-
None
-
None
-
None
-
None
-
None
-
None
-
None
The following repro leads to the error "Failed to optimize pipeline :: caused by :: unknown operator: $alwaysFalse", despite being a valid agg pipeline.
I've noticed a $project/$addFields is required to repro, followed by an $or predicate and an always false $elemMatch predicate
- is depended on by
-
SERVER-111741 Complete TODO listed in SERVER-101007
-
- Closed
-
- is related to
-
SERVER-98935 $elemMatch with nested $all is not reparseable
-
- In Code Review
-
- related to
-
SERVER-114125 PBT tests re-discover SERVER-101007 for 8.0-8.2
-
- Closed
-
-
SERVER-133459 $elemMatch of trivially true predicate misinterpreted after serialisation/deserialisation
-
- Closed
-
-
SERVER-89308 Create query property tester
-
- Closed
-
-
SERVER-114269 Remove FCV checks from PBTs
-
- Backlog
-
-
SERVER-111741 Complete TODO listed in SERVER-101007
-
- Closed
-
-
SERVER-70477 Optimizing expressions that are tautologically constant (e.g., `True` or `False`)
-
- Closed
-