SERVER-101007 $or followed by always false $elemMatch can fail pipeline optimization (#42166)

GitOrigin-RevId: f3e9d7ba116750de732aa1522e72ef91e563c08f